--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "coding challenge",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./index.js"
   },
+  "proxy": "http://localhost:4000",
   "author": "walmex-team",
   "license": "ISC",
   "dependencies": {
@@ -13,3 +14,4 @@
     "lodash": "^4.17.21"
   }
 }
+
